Rendered player cards with CSS

--- a/ultimate_mlb_manager_frontend/test.html
+++ b/ultimate_mlb_manager_frontend/test.html
@@ -3,6 +3,7 @@
 <head>
   <title>Ultimate MLB Manager </title>
   <link href="style.css" media="screen" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -555,4 +556,6 @@
                
   
 </body>
+<script type="text/javascript" src="card.js"></script>
+
 </html>
