--- a/ultimate_mlb_manager_frontend/index.html
+++ b/ultimate_mlb_manager_frontend/index.html
@@ -3,14 +3,29 @@
 <head>
   <title>Ultimate MLB Manager </title>
   <link href="style.css" media="screen" rel="stylesheet" />
+  <link href="menu.css" media="screen" rel="stylesheet" />
   <script type="text/javascript" src="src/fetch.js"></script>
   <script type="text/javascript" src="src/index.js"></script>
-  <script type="text/javascript" src="src/fetch.js"></script>
   <script type="text/javascript" src="src/renderCards.js"></script>
-
 </head>
 
 <body>
- 
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+
+  </div>
+  
+  
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; View Lineup</span>
+  
+  <script>
+  function openNav() {
+    document.getElementById("mySidenav").style.width = "20%";
+  }
+  
+  function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+  }
+  </script>
 </body>
 </html>
