Added lineup setion in popup menu

--- a/ultimate_mlb_manager_frontend/index.html
+++ b/ultimate_mlb_manager_frontend/index.html
@@ -5,6 +5,8 @@
   <link href="style.css" media="screen" rel="stylesheet" />
   <link href="menu.css" media="screen" rel="stylesheet" />
   <script type="text/javascript" src="src/fetch.js"></script>
+  <script type="text/javascript" src="src/addPlayer.js"></script>
+
   <script type="text/javascript" src="src/index.js"></script>
   <script type="text/javascript" src="src/renderCards.js"></script>
 </head>
@@ -12,7 +14,9 @@
 <body>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <ol id='playerList'>
 
+    </ol>
   </div>
   
   
