Added player filter to player model

--- a/ultimate_mlb_manager_frontend/index.html
+++ b/ultimate_mlb_manager_frontend/index.html
@@ -14,16 +14,16 @@
 <body>
   <div class="topnav">
     <a class="active" href="#home">All Players</a>
-    <a href="#news">P</a>
-    <a href="#news">C</a>
-    <a href="#contact">1B</a>
-    <a href="#contact">2B</a>
-    <a href="#contact">3B</a>
-    <a href="#contact">SS</a>
-    <a href="#contact">LF</a>
-    <a href="#contact">CF</a>
-    <a href="#contact">RF</a>
-    <a href="#about" onclick="openNav()" style="float: right">View Lineup</a>
+    <a href="#p">P</a>
+    <a href="#c">C</a>
+    <a href="#1b">1B</a>
+    <a href="#2b">2B</a>
+    <a href="#3b">3B</a>
+    <a href="#ss">SS</a>
+    <a href="#lf">LF</a>
+    <a href="#cf">CF</a>
+    <a href="#rf">RF</a>
+    <a onclick="openNav()" style="float: right">View Lineup</a>
   </div>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
