--- a/ultimate_mlb_manager_frontend/index.html
+++ b/ultimate_mlb_manager_frontend/index.html
@@ -14,15 +14,15 @@
 <body>
   <div class="topnav">
     <a class="active" href="#home">All Players</a>
-    <a href="#p">P</a>
-    <a href="#c">C</a>
-    <a href="#1b">1B</a>
-    <a href="#2b">2B</a>
-    <a href="#3b">3B</a>
-    <a href="#ss">SS</a>
-    <a href="#lf">LF</a>
-    <a href="#cf">CF</a>
-    <a href="#rf">RF</a>
+    <a onclick="filterPlayers('P')">P</a>
+    <a onclick="filterPlayers('C')">C</a>
+    <a onclick="filterPlayers('1B')">1B</a>
+    <a onclick="filterPlayers('2B')">2B</a>
+    <a onclick="filterPlayers('3B')">3B</a>
+    <a onclick="filterPlayers('SS')">SS</a>
+    <a onclick="filterPlayers('LF')">LF</a>
+    <a onclick="filterPlayers('CF')">CF</a>
+    <a onclick="filterPlayers('RF')">RF</a>
     <a onclick="openNav()" style="float: right">View Lineup</a>
   </div>
   <div id="mySidenav" class="sidenav">
