--- a/ultimate_mlb_manager_frontend/index.html
+++ b/ultimate_mlb_manager_frontend/index.html
@@ -13,16 +13,16 @@
 
 <body>
   <div class="topnav">
-    <a class="active" onclick="getAllPlayers()">All Players</a>
-    <a onclick="filterPlayers('P')">P</a>
-    <a onclick="filterPlayers('C')">C</a>
-    <a onclick="filterPlayers('1B')">1B</a>
-    <a onclick="filterPlayers('2B')">2B</a>
-    <a onclick="filterPlayers('3B')">3B</a>
-    <a onclick="filterPlayers('SS')">SS</a>
-    <a onclick="filterPlayers('LF')">LF</a>
-    <a onclick="filterPlayers('CF')">CF</a>
-    <a onclick="filterPlayers('RF')">RF</a>
+    <a class="active" onclick="Player.all()">All Players</a>
+    <a onclick="Player.filterPlayers('P')">P</a>
+    <a onclick="Player.filterPlayers('C')">C</a>
+    <a onclick="Player.filterPlayers('B1')">1B</a>
+    <a onclick="Player.filterPlayers('B2')">2B</a>
+    <a onclick="Player.filterPlayers('B3')">3B</a>
+    <a onclick="Player.filterPlayers('SS')">SS</a>
+    <a onclick="Player.filterPlayers('LF')">LF</a>
+    <a onclick="Player.filterPlayers('CF')">CF</a>
+    <a onclick="Player.filterPlayers('RF')">RF</a>
     <a style="float:right">Past Lineups </a>
     <a onclick="openNav()" style="float: right">Current Lineup</a>
   </div>
@@ -34,7 +34,7 @@
     <ol id='playerList'>
 
     </ol>
-    <a>Save Lineup</a>
+    <button onclick="Player.filterPlayer('P')">Save Lineup</button>
   </div>
   
   <script>
