Configed fetch to post to DB

--- a/ultimate_mlb_manager_frontend/index.html
+++ b/ultimate_mlb_manager_frontend/index.html
@@ -34,7 +34,7 @@
     <ol id='playerList'>
 
     </ol>
-    <button onclick="Player.filterPlayer('P')">Save Lineup</button>
+    <button onclick="Lineup.save()">Save Lineup</button>
   </div>
   
   <script>
