Added Games fetch to create objects

--- a/ultimate_mlb_manager_frontend/index.html
+++ b/ultimate_mlb_manager_frontend/index.html
@@ -6,6 +6,7 @@
   <link href="menu.css" media="screen" rel="stylesheet" />
   <script type="text/javascript" src="src/lineup.js"></script>
   <script type="text/javascript" src="src/player.js"></script>
+  <script type="text/javascript" src="src/game.js"></script>
   <script type="text/javascript" src="src/fetch.js"></script>
   <script type="text/javascript" src="src/index.js"></script>
   <script type="text/javascript" src="src/renderCards.js"></script>
@@ -13,7 +14,7 @@
 
 <body>
   <div class="topnav">
-    <a class="active" onclick="Player.all()">All Players</a>
+    <a class="active" onclick="Player.showAll()">All Players</a>
     <a onclick="Player.filterPlayers('P')">P</a>
     <a onclick="Player.filterPlayers('C')">C</a>
     <a onclick="Player.filterPlayers('B1')">1B</a>
