Updated Seed to accept games

--- a/ultimate_mlb_manager_frontend/index.html
+++ b/ultimate_mlb_manager_frontend/index.html
@@ -29,7 +29,9 @@
   </div>
   <br>
   <img src="assets/images/dodgers_logo.png">
-
+  <br>
+  <h1>Display game if there is a one being played that day</h1>
+  <br>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <ol id='playerList'>
