--- a/ultimate_mlb_manager_frontend/index.html
+++ b/ultimate_mlb_manager_frontend/index.html
@@ -30,14 +30,14 @@
   <br>
   <img src="assets/images/dodgers_logo.png">
   <br>
-  <h1>Display game if there is a one being played that day</h1>
+  <h1 id="currentGame">Display game if there is a one being played that day</h1>
   <br>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <ol id='playerList'>
 
     </ol>
-    <button onclick="Lineup.save()">Save Lineup</button>
+    <button onclick="Lineup.save(game_id)">Save Lineup</button>
   </div>
   
   <script>
