--- a/ultimate_mlb_manager_frontend/index.html
+++ b/ultimate_mlb_manager_frontend/index.html
@@ -10,6 +10,8 @@
   <script type="text/javascript" src="src/fetch.js"></script>
   <script type="text/javascript" src="src/index.js"></script>
   <script type="text/javascript" src="src/renderCards.js"></script>
+  <script type="text/javascript" src="src/lineupDisplay.js"></script>
+
 </head>
 
 <body>
