created update method to update all players

--- a/ultimate_mlb_manager_frontend/index.html
+++ b/ultimate_mlb_manager_frontend/index.html
@@ -4,6 +4,7 @@
   <title>Ultimate MLB Manager </title>
   <link href="style.css" media="screen" rel="stylesheet" />
   <link href="menu.css" media="screen" rel="stylesheet" />
+  <script type="text/javascript" src="src/home.js"></script>
   <script type="text/javascript" src="src/lineup.js"></script>
   <script type="text/javascript" src="src/player.js"></script>
   <script type="text/javascript" src="src/game.js"></script>
@@ -11,7 +12,6 @@
   <script type="text/javascript" src="src/index.js"></script>
   <script type="text/javascript" src="src/renderCards.js"></script>
   <script type="text/javascript" src="src/lineupDisplay.js"></script>
-
 </head>
 
 <body>
