--- a/ultimate_mlb_manager_frontend/index.html
+++ b/ultimate_mlb_manager_frontend/index.html
@@ -5,6 +5,7 @@
   <link href="style.css" media="screen" rel="stylesheet" />
   <link href="menu.css" media="screen" rel="stylesheet" />
   <script type="text/javascript" src="src/home.js"></script>
+  <script type="text/javascript" src="src/nav.js"></script>
   <script type="text/javascript" src="src/lineup.js"></script>
   <script type="text/javascript" src="src/player.js"></script>
   <script type="text/javascript" src="src/game.js"></script>
@@ -40,21 +41,11 @@
 
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <h2 style="color: white" class="navHeading"> </h2>
     <ol id='playerList'>
     </ol>
-    <button onclick="Lineup.save(game_id)">Save Lineup</button>
+    <button onclick="Lineup.save(game_id)" class = sB>Save Lineup</button>
   </div>
   
-  
-  <script>
-  function openNav() {
-    document.getElementById("mySidenav").style.width = "20%";
-  }
-  
-  function closeNav() {
-    document.getElementById("mySidenav").style.width = "0";
-  }
-  </script>
-
 </body>
 </html>
