Hid current linrup button if no game was today

--- a/ultimate_mlb_manager_frontend/index.html
+++ b/ultimate_mlb_manager_frontend/index.html
@@ -32,7 +32,7 @@
     <a onclick="Player.filterPlayers('CF')" class="navLink">CF</a>
     <a onclick="Player.filterPlayers('RF')" class="navLink">RF</a>
     <a onclick="toggleCards()" style="float:right" class="lineup">Past Lineups </a>
-    <a onclick="openNav()" style="float: right" class="navLink">Current Lineup</a>
+    <a onclick="openNav()" style="float: right" class="navLink" id="currentLineup">Current Lineup</a>
   </div>
   <br>
   <img src="assets/images/dodgers_logo.png">
